--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#f2f1f1"
+    android:background="?attr/loginBackground"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
+    android:background="?attr/Background"
     android:layout_margin="16dp"
     android:layout_height="wrap_content">
     <EditText
@@ -32,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@null"
+        android:textColorHint="?attr/textColor"
         android:layout_margin="10dp"
         android:hint="请输入用户名（由汉字.字母.数字组成）"/>
 
@@ -42,24 +43,17 @@
         android:layout_height="50dp"
         android:layout_margin="10dp"
         android:background="@null"
+        android:textColorHint="?attr/textColor"
         android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:hint="请输入密码(由字母和数字组成)"/>
     <EditText
         android:id="@+id/et_passagain_register"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="?attr/textColor"
         android:layout_margin="10dp"
         android:background="@null"
         android:hint="请再次输入密码"/>
-    <EditText
-        android:id="@+id/et_mobile_register"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@null"
-        android:layout_margin="10dp"
-        android:digits="0123456789"
-        android:phoneNumber="true"
-        android:hint="请输入手机号"/>
 </LinearLayout>
     <Button
         android:id="@+id/bt_register"
