--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,10 @@
 <resources>
     <attr name="titleBarColor" format="color" />
     <attr name="textColor" format="color" />
+    <attr name="buttonBackground" format="color" />
     <attr name="textBackground" format="color" />
+    <attr name="loginBackground" format="color" />
     <attr name="settingBackground" format="color" />
     <attr name="imageValue" format="reference"/>
+    <attr name="Background" format="color" />
 </resources>
